Fix checkstyle
Upgraded checkstyle is a bit touchier about anonymous classes,
fix reported violations.

Change-Id: I98d060ed9c44d49ae57f1b9fce33527fa6bcd48d
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>